// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.html 1`] = `
====================================options=====================================
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <i class.bind="icon"></i>
</template>

=====================================output=====================================
<template>
  <i class.bind="icon"></i>
</template>

================================================================================
`;

exports[`basic.html 2`] = `
====================================options=====================================
htmlTopLevelIndent: "always"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <i class.bind="icon"></i>
</template>

=====================================output=====================================
<template>
  <i class.bind="icon"></i>
</template>

================================================================================
`;

exports[`basic.html 3`] = `
====================================options=====================================
htmlTopLevelIndent: "never"
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <i class.bind="icon"></i>
</template>

=====================================output=====================================
<template>
  <i class.bind="icon"></i>
</template>

================================================================================
`;
